# mcerv

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: ci.yml
src/: command.rs  config.rs  fabric_meta.rs  lib.rs  main.rs  state.rs
src/network/: fabric_meta.rs  forge_meta.rs  mod.rs  modrinth.rs  vanilla_meta.rs
src/system/: cli.rs  command.rs  config.rs  forks.rs  jar_parser.rs  mod.rs  server_info.rs  state.rs
testdata/: README
tests/data/: config1.json
