[package]
name = "multi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = "0.12.22"
serde = {version ="1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.46.1", features = ["full"]}
prettytable-rs = "0.10.0"
rustyline = "16.0.0"
shlex = "1.3.0"
