[package]
name = "mcerv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.46.1", features = ["full"]}
prettytable-rs = "0.10.0"
shlex = "1.3.0"
zip = "4.3.0"
sha1 = "0.10.6"
futures = "0.3.31"
clap = {version = "4.5.47", features = ["derive"]}
directories = "6.0.0"
dialoguer = "0.12.0"
roxmltree = "0.20.0"
